[project]
name = "spotify-audio-embeddings"
version = "0.1.0"
description = "Audio embeddings with OpenL3 for music similarity analysis and clustering"
requires-python = ">=3.11"
dependencies = [
    "tensorflow==2.13.0 ; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "tensorflow-macos==2.13.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openl3==0.4.2",
    "soundfile>=0.12.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "apsw>=3.42.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]
